# renplex

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  build.rs  cluster_viz.py  feature_viz.py  image_comp.py  image_dconv_viz.py  image_pool_viz.py  image_viz.py  loss_acc_curves.py  matrix_viz.py  signal_data.py  signal_rec_tensorflow.py  signal_viz.py  simple_img.py  tensorflowcnn.py
examples/: classification.rs  macro_network_setup.rs  manual_network_setup.rs  module_network_setup.rs  regression.rs  smodule_macro_der.rs
renplex_core/: Cargo.toml
renplex_core/src/: lib.rs
renplex_derive/: Cargo.toml
renplex_derive/src/: lib.rs
src/: lib.rs  main.rs
src/act/: mod.rs
src/cvnn/: mod.rs
src/cvnn/layer/: conv.rs  dense.rs  flatten.rs  mod.rs  reduce.rs
src/cvnn/network/: mod.rs
src/dataset/: err.rs  mod.rs
src/dynamic/: mod.rs
src/err/: mod.rs
src/init/: mod.rs
src/input/: mod.rs
src/io/: mod.rs
src/light/: mod.rs
src/light/complex/: mod.rs
src/light/real/: mod.rs
src/light/real/unit/: mod.rs  neuron.rs
src/lite/complex/: mod.rs
src/lite/complex/layer/: dense.rs  mod.rs
src/lite/complex/network/: mod.rs
src/lite/complex/unit/: dense.rs  mod.rs
src/lite/real/: mod.rs
src/lite/real/layer/: dense.rs  mod.rs
src/lite/real/network/: mod.rs
src/lite/real/unit/: dense.rs  mod.rs
src/math/: complex.rs  matrix.rs  mod.rs  random.rs
src/math/backpropagation/: mod.rs
src/math/cfloat/: mod.rs  ops.rs
src/math/complex/: casts.rs  mod.rs  ops.rs
src/math/ffi/: mod.rs
src/math/matrix/: dataset.rs  err.rs  mod.rs  ops.rs  sample.rs
src/math/matrix/ffi/: mod.rs
src/math/ops/: arc.rs  base.rs  exp.rs  mod.rs  powi.rs  sign.rs  sqrt.rs  trig.rs
src/math/random/: mod.rs
src/opt/: mod.rs
src/prelude/: mod.rs
src/prelude/layer/: dense.rs  mod.rs
src/prelude/network/: criteria.rs  mod.rs
src/prelude/neuron/: activation.rs  dense.rs  mod.rs  param.rs
src/rvnn/: mod.rs
src/rvnn/layer/: conv.rs  dense.rs  flatten.rs  mod.rs
src/rvnn/network/: mod.rs
viz/: image_comp.py  signal_data.py  signal_viz.py  test_signal.py
