[package]
name = "renplex"
version = "0.1.1"
edition = "2021"
authors = ["Pedro Alves <pedromfa98@gmail.com>"]
description = "A library capable of modeling complexed-valued neural networks built with Rust."
readme = "README.md"
homepage = "https://github.com/Pxdr0-A/renplex.git"
repository = "https://github.com/Pxdr0-A/renplex.git"
license-file = "LICENSE"
keywords = ["neural-networks", "library"]

[lib]
name = "renplex"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.10"
num-complex = "0.4.6"
num-traits = "0.2.19"
rand = "0.8.5"

[build-dependencies]
cc = "1.0"