[package]
name = "renplex_core"
version = "0.1.1"
edition = "2021"
authors = ["Pedro Alves <pedromfa98@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.10"
num-complex = "0.4.6"
num-traits = "0.2.19"
rand = "0.8.5"

[build-dependencies]
cc = "1.0"
